<resources>
    <string name="incall_default_package">com.android.incallui</string>
    <string name="dialer_default_package">com.android.contacts</string>
    <string name="incall_default_class">com.android.incallui.CallHandlerService</string>
    <string name="incall_default_activity">com.android.incallui.InCallActivity</string>
    <string name="incall_default_recording_service_class">com.android.incallui.CallRecordingService</string>
    <string name="dialer_default_class">com.android.contacts.activities.TwelveKeyDialer</string>
    <string name="carrier_settings" />
    <string name="carrier_settings_menu" />
    <string name="config_dialing_emergency_number_suffix" />
    <string name="onscreenHangupAll">Hangup all</string>
    <string name="onscreenHangupHolding">Hangup holding</string>
    <string name="onscreenHangupActiveAndAnswerWaiting">Hangup active, answer waiting</string>
    <string name="onscreenECT">Transfer</string>
    <string name="dm_lock">DM Locked</string>
    <string name="dm_unlock">DM Unlock</string>
    <string name="start_record">Start recording</string>
    <string name="stop_record">Stop recording</string>
    <string name="str_db_playlist_name">My recordings</string>
    <string name="alert_device_error">Error occurred on audio device</string>
    <string name="ext_media_badremoval_notification_title">SD card unexpectedly removed</string>
    <string name="error_sdcard_access">Unable to access SD card</string>
    <string name="confirm_device_info_full">SD card is out of space, the recording has been saved.</string>
    <string name="confirm_save_info_saved">The recording has been saved</string>
    <string name="confirm_save_info_saved_to">The recording has been saved to</string>
    <string name="sim_toolkit">SIM Toolkit</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="no_sim_card_inserted">Please insert SIM to launch SIM Toolkit.</string>
    <string name="airplane_mode_on">Unable to launch SIM Toolkit since airplane mode is on.</string>
    <string name="lable_sim_not_ready">SIM Toolkit is not ready or unsupported</string>
    <string name="gemini_3g_indic">3G</string>
    <string name="callFailed_dsac_vt_incompatible_destination">Video call cannot be setup.Video telephone is unsupported on the phone you calling, dial with voice call?</string>
    <string name="callFailed_dsac_vt_resource_unavailable">Video call cannot be setup.The phone you have dialed is out of 3G service area, dial with voice call?</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="call_settings">Call settings</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="always_enable_mms">Always receive MMS</string>
    <string name="always_enable_mms_summary">Receive MMS even when mobile data is off</string>
    <string name="network_unlock">Unlock</string>
    <string name="preferred_network_type_title">Preferred network type</string>
    <string name="cdma_system_select_title">System select</string>
    <string name="cdma_system_select_summary">Change the CDMA roaming mode</string>
    <string name="cdma_system_select_dialogtitle">System select</string>
    <string name="cdma_subscription_title">CDMA subscription</string>
    <string name="cdma_subscription_summary">Change between RUIM/SIM and NV</string>
    <string name="cdma_subscription_dialogtitle">subscription</string>
    <string name="cdma_activate_device">Activate device</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="fdn_summary">Restrict outgoing calls to listed FDNs or to numbers with certain prefixes</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="other_settings">Other call settings</string>
    <string name="sip_settings">Internet call settings</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="dial_pad_autocomplete">Dial pad autocomplete</string>
    <string name="voice_privacy">Voice privacy</string>
    <string name="voice_privacy_summary" />
    <string name="telocation_setting">Location settings</string>
    <string name="telocation_show_settings">Display settings</string>
    <string name="telocation_enable_title">Show location</string>
    <string name="telocation_custom_location_title">My locations</string>
    <string name="telocation_custom_location_summary">Manage saved area codes and group numbers</string>
    <string name="telocation_call_assistant">Dialing assistant</string>
    <string name="telocation_contacts_countrycode">Default country code</string>
    <string name="telocation_contacts_countrycode_hint">Enter country code</string>
    <string name="telocation_auto_country_code">Add country code</string>
    <string name="telocation_auto_country_code_summary">Automatically add country code before dialing contacts</string>
    <string name="call_record_auto_whitelist">Custom list</string>
    <string name="call_record_auto_unknown_number">Unknown numbers</string>
    <string name="auto_record_yellowpage">Directory</string>
    <string name="call_record_auto_title">Record calls automatically</string>
    <string name="call_record_auto_summary">"Recordings will be saved to the folder MIUI/sound_recorder/call_rec on your device's internal memory"</string>
    <string name="call_record_auto_scenario_title">Record calls from</string>
    <string name="call_record_whitelist_custom">Selected numbers</string>
    <string name="call_recording_setting">Call recording</string>
    <string name="call_recording_notification_toggle_title">Call recording notification</string>
    <string name="call_recording_notification_summary">Show notification after call has been recorded</string>
    <string name="autoip">Auto IP dialing</string>
    <string name="autoip_prefix">IP prefix</string>
    <string name="autoip_prefix_summary">"Carrier's IP prefix is %s"</string>
    <string name="autoip_setting">Automatic IP settings</string>
    <string name="autoip_summary">Add an IP prefix to a foreign number</string>
    <string name="autoip_current_areacode">Current area code</string>
    <string name="autoip_current_areacode_summary">Area code of your current location</string>
    <string name="autoip_support_local_numbers">Always use IP prefix</string>
    <string name="autoip_add_zero_prefix">Add 0 prefix for mobile</string>
    <string name="autoip_exception">"Numbers that don't need IP prefix"</string>
    <string name="dial_related_setting_catory">Dial</string>
    <string name="t9_indexing_method_title">T9 search input</string>
    <string name="auto_redial_pref_title">Auto-redial</string>
    <string name="auto_redial_pref_summary">Redial automatically if the line is busy</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Turn on Auto-retry mode</string>
    <string name="answer_features_setting_category">Answering and Calls</string>
    <string name="answer_state_setting_title">Incoming call settings</string>
    <string name="turnover_mute_title">Flip to silence ring</string>
    <string name="turnover_mute_summary">When phone is rotated horizontally, flip it over to silence ring</string>
    <string name="handon_ringer_summary">"Reduce ringer volume for incoming call when phone is raised. This feature doesn't work when vibration for incoming calls is on."</string>
    <string name="handon_ringer_title">Quiet ringer when lifted</string>
    <string name="flash_when_ring_summary">Flash notification light for incoming calls</string>
    <string name="flash_when_ring_title">Flash when ringing</string>
    <string name="enable_proximity_summary">Turn off screen during calls</string>
    <string name="enable_proximity_title">Proximity sensor</string>
    <string name="enable_antispam_strange_title">Mute first ring</string>
    <string name="enable_antispam_strange_summary">Mute the first ring for calls from unknown numbers</string>
    <string name="reject_via_sms">Quick responses</string>
    <string name="reject_via_sms_summary">Edit pre-written text messages</string>
    <string name="missed_call_notify_times_title">Missed call reminders</string>
    <string name="missed_call_notify_times_summary">Choose the number of times you want be reminded about missed calls (reminders are separated by 5 minute intervals)</string>
    <string name="connect_disconnect_vibrate_title">Vibrate when your call is answered</string>
    <string name="connect_disconnect_vibrate_summary">"Vibrate when the person you're calling answers your call"</string>
    <string name="lable_call_barring">Call barring</string>
    <string name="call_barring_sum">Voice call barring settings</string>
    <string name="call_waiting_tone_title">Call waiting notification</string>
    <string name="cdma_display_precise_call_state_title">Display call status</string>
    <string name="cdma_display_precise_call_state_summary">Confirm that your network provider supports this function</string>
    <string name="other_settings_category">Other</string>
    <string name="caller_id_title">Caller ID</string>
    <string name="caller_id_summary">Hide my number for outgoing calls (confirm that your carrier supports this feature)</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_settings_number_hint">Enter voice mailbox number</string>
    <string name="voicemail_settings_number_title">Voicemail number</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="voicemail_provider_summary">Choose voicemail service</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="uplmn_list_setting_title">Preferred networks</string>
    <string name="preference_dial_pad_touch_tone_title">Dial pad touch tones</string>
    <string name="msim_setting_categery_title">SIM card settings</string>
    <string name="msim_general_setting">Settings</string>
    <string name="msim_default_setting">Default settings</string>
    <string name="msim_pref_title_voice">Dial</string>
    <string name="msim_pref_title_data">Internet</string>
    <string name="call_background_setting">Conversation background</string>
    <string name="international_roaming_setting">International roaming</string>
</resources>