<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/dial_related_setting_catory">
        <miui.preference.ValuePreference android:title="@string/preference_dial_pad_touch_tone_title" android:key="pref_key_dial_pad_touch_tone" />
        <com.android.phone.settings.ValueListPreference android:persistent="true" android:entries="@array/t9_indexing_method_entries" android:title="@string/t9_indexing_method_title" android:key="button_t9_index_method_settings" android:entryValues="@array/t9_indexing_method_entry_values" />
        <com.android.phone.settings.CheckBoxTitleIconPreference android:title="@string/auto_redial_pref_title" android:key="button_auto_redial" android:summary="@string/auto_redial_pref_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/answer_features_setting_category">
        <com.android.phone.settings.ValueListPreference android:entries="@array/call_background_entries" android:title="@string/call_background_setting" android:key="button_call_background" android:defaultValue="0" android:dialogTitle="@string/call_background_setting" android:entryValues="@array/call_background_values" />
        <miui.preference.ValuePreference android:title="@string/autoip" android:key="pref_key_auto_ip">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.AutoIpSetting" />
        </miui.preference.ValuePreference>
        <com.android.phone.settings.ValueListPreference android:entries="@array/missed_call_notify_times_entries" android:title="@string/missed_call_notify_times_title" android:key="button_missed_call_notify_times" android:summary="@string/missed_call_notify_times_summary" android:defaultValue="0" android:dialogTitle="@string/missed_call_notify_times_title" android:entryValues="@array/missed_call_notify_times_entry_values" />
        <com.android.phone.settings.ValueListPreference android:entries="@array/connect_disconnect_vibrate_entries" android:title="@string/connect_disconnect_vibrate_title" android:key="button_connect_disconnect_vibrate" android:summary="@string/connect_disconnect_vibrate_summary" android:defaultValue="100" android:dialogTitle="@string/connect_disconnect_vibrate_title" android:entryValues="@array/connect_disconnect_vibrate_entry_values" />
        <com.android.phone.settings.CheckBoxTitleIconPreference android:persistent="false" android:title="@string/cdma_display_precise_call_state_title" android:key="button_display_precise_call_state" android:summary="@string/cdma_display_precise_call_state_summary" />
        <com.android.phone.settings.CdmaVoicePrivacyCheckBoxPreference android:persistent="false" android:title="@string/voice_privacy" android:key="button_voice_privacy" android:summary="@string/voice_privacy_summary" />
        <com.android.phone.settings.ValueListPreference android:entries="@array/call_waiting_tone_entries" android:title="@string/call_waiting_tone_title" android:key="button_call_waiting_tone" android:defaultValue="0" android:dialogTitle="@string/call_waiting_tone_title" android:entryValues="@array/call_waiting_tone_entry_values" />
        <PreferenceScreen android:persistent="false" android:title="@string/reject_via_sms" android:key="button_respond_via_sms_key" android:summary="@string/reject_via_sms_summary">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.RespondViaSmsManager$Settings" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings_category">
        <PreferenceScreen android:persistent="false" android:title="@string/lable_call_barring" android:key="button_call_barring" android:summary="@string/call_barring_sum">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.CallBarring" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/sip_settings" android:key="button_sip_settings">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.sip.SipSettings" />
        </PreferenceScreen>
        <com.android.phone.settings.TitleIconPreference android:persistent="false" android:title="@string/caller_id_title" android:key="button_caller_id" android:summary="@string/caller_id_summary">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.GsmUmtsCallerIdSetting" />
        </com.android.phone.settings.TitleIconPreference>
        <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn" android:summary="@string/fdn_summary">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.FdnSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/voicemail_settings" android:key="button_voicemail">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.VoicemailSetting" />
        </PreferenceScreen>
        <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry" android:summary="@string/auto_retry_mode_summary" />
        <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
        <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title" android:key="button_hac" android:summary="@string/hac_mode_summary" />
        <ListPreference android:entries="@array/dtmf_tone_entries" android:title="@string/dtmf_tones_title" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary" android:entryValues="@array/dtmf_tone_values" />
    </PreferenceCategory>
</PreferenceScreen>