<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/autoip_setting"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:title="@string/autoip" android:key="button_autoip" android:summary="@string/autoip_summary" android:defaultValue="false" android:disableDependentsState="false" />
    <EditTextPreference android:persistent="true" android:title="@string/autoip_prefix" android:key="button_text_autoip_prefix" android:summary="@string/autoip_prefix_summary" android:dependency="button_autoip" android:inputType="phone" />
    <PreferenceScreen android:title="@string/autoip_prefix" android:key="button_text_ip_prefix_msim" android:dependency="button_autoip">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.AutoIpEditPrefixActivity" />
    </PreferenceScreen>
    <EditTextPreference android:persistent="true" android:title="@string/autoip_current_areacode" android:key="button_text_autoip_current_areacode" android:summary="@string/autoip_current_areacode_summary" android:dependency="button_autoip" android:inputType="number" />
    <CheckBoxPreference android:persistent="true" android:title="@string/autoip_support_local_numbers" android:key="button_autoip_support_local_numbers" android:dependency="button_autoip" />
    <CheckBoxPreference android:persistent="true" android:title="@string/autoip_add_zero_prefix" android:key="button_autoip_add_zero_prefix" android:dependency="button_autoip" />
    <PreferenceScreen android:title="@string/autoip_exception" android:key="button_autoip_exceptions" android:dependency="button_autoip">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.AutoIpExceptionSetting" />
    </PreferenceScreen>
</PreferenceScreen>